# DTEngine_v1

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp
Engine/Internal/: CMakeLists.txt  Rendering.cpp  Rendering.hpp
Engine/include/: Engine.hpp
Engine/include/Engine/: Component.hpp  Entity.hpp  GameObject.hpp  InternalWork.hpp  SpriteRenderer.hpp  Utils.hpp  Window.hpp  World.hpp
Engine/src/core/: Component.cpp  Engine.cpp  Entity.cpp  GameObject.cpp  InternalWorksManager.cpp  InternalWorksManager.hpp  Utils.cpp  World.cpp
Engine/src/rendering/: Rendering.cpp  Rendering.hpp  SpriteRenderer.cpp  Window.cpp
Game/: Game.cpp  Game.hpp  main.cpp
